# visioncart

./: .eslintrc.js  .gitignore  .yarnrc.yml  README.md  package.json  turbo.json
apps/api/: .env.example  .gitignore  .vercelignore  package.json  pyproject.toml  requirements.txt  vercel.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_phase2_catalog.py  0002_phase2_repair.py
apps/api/api/: index.py
apps/api/src/visioncart_api/: __init__.py  config.py  db.py  deps.py  main.py  middleware.py  models.py  schemas.py  security.py  seed.py
apps/api/src/visioncart_api/routers/: __init__.py  admin.py  assets.py  auth.py  cart.py  catalog.py  favorites.py  guests.py  orders.py  tryon.py
apps/api/src/visioncart_api/services/: __init__.py  auth_tokens.py
apps/api/tests/: conftest.py  test_admin.py  test_auth.py  test_cart_orders.py  test_catalog.py  test_health.py  test_phase2.py
docs/: README.txt  (+10 more)
tooling/assets/: DEVELOPMENT_ASSETS.md  package.json  pyproject.toml
tooling/assets/fixtures/earring/synthetic-earring/: anchors.json  package.json  product.json
tooling/assets/fixtures/glasses/synthetic-glasses/: anchors.json  package.json  product.json
tooling/assets/fixtures/nose_pin/synthetic-nose-pin/: anchors.json  package.json  product.json
tooling/assets/fixtures/ring/synthetic-ring/: anchors.json  license.json  package.json  product.json
tooling/assets/fixtures/ring/synthetic-ring/assets/: model.glb  (+1 more)
tooling/assets/fixtures/watch/synthetic-watch/: anchors.json  package.json  product.json
tooling/assets/sources/: README.md
tooling/assets/src/visioncart_assets/: __init__.py  cli.py  fixtures.py  glb.py  ingest.py  validation.py
tooling/assets/tests/: test_cli.py  test_glb.py  test_ingest.py  test_validation.py
(+117 files in other folders)
