[project]
name = "visioncart-assets"
version = "0.1.0"
description = "VisionCart 3D asset validation and conversion tooling"
requires-python = ">=3.12,<3.14"
dependencies = [
  "jsonschema>=4.23,<5",
]

[project.scripts]
asset-cli = "visioncart_assets.cli:main"

[dependency-groups]
dev = [
  "mypy",
  "pytest",
  "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/visioncart_assets"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
